[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButtonWithTooltip.tscn" type="PackedScene" id=2]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityButton_LevelUpHighlighted.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityIndicator_LevelIndicator.png" type="Texture" id=4]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityIndicator_Background.png" type="Texture" id=5]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityIndicator_LightWaves.png" type="Texture" id=6]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityButton_LevelUp.png" type="Texture" id=7]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIParts/Base_SingleHeroAbilityPanel.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="Base_SingleHeroAbilityPanel" type="MarginContainer"]
margin_right = 50.0
margin_bottom = 72.0
grow_vertical = 0
rect_min_size = Vector2( 0, 72 )
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 50.0
margin_bottom = 72.0
grow_vertical = 0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/separation = 0

[node name="AbilityLevelUpButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_left = 14.0
margin_right = 36.0
margin_bottom = 22.0
size_flags_horizontal = 6
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 50.0
margin_bottom = 72.0
mouse_filter = 2

[node name="AbilityDisplayButton" parent="VBoxContainer/MarginContainer" instance=ExtResource( 2 )]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 26.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="AbilityImage" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
margin_right = 20.0
margin_bottom = 42.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 50.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_vertical = 2
custom_constants/margin_right = 1
custom_constants/margin_top = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 18.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 18.0
mouse_filter = 2
custom_constants/margin_left = 1

[node name="AbilityLevelLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/MarginContainer"]
margin_left = 1.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
[connection signal="about_tooltip_construction_requested" from="VBoxContainer/AbilityLevelUpButton" to="." method="_on_AbilityLevelUpButton_about_tooltip_construction_requested"]
[connection signal="pressed_mouse_event" from="VBoxContainer/AbilityLevelUpButton" to="." method="_on_AbilityLevelUpButton_pressed_mouse_event"]
[connection signal="about_tooltip_construction_requested" from="VBoxContainer/MarginContainer/AbilityDisplayButton" to="." method="_on_AbilityDisplayButton_about_tooltip_construction_requested"]
[connection signal="pressed_mouse_event" from="VBoxContainer/MarginContainer/AbilityDisplayButton" to="." method="_on_AbilityDisplayButton_pressed_mouse_event"]
